{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 31,
  "lineage": "2addc792-bbfc-3f48-acc1-aeb1f89e9654",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/networkSecurityGroups/nsg_dev_sprint1_hella",
            "location": "uksouth",
            "name": "nsg_dev_sprint1_hella",
            "resource_group_name": "rg-dev-uks-sprint01",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsg_trial_sprint01_hella",
                "priority": 2045,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/networkSecurityGroups/nsg2_dev_sprint1_hella",
            "location": "uksouth",
            "name": "nsg2_dev_sprint1_hella",
            "resource_group_name": "rg-dev-uks-sprint01",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsg2_trial_sprint01_hella",
                "priority": 2045,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/networkSecurityGroups/nsg3_dev_sprint1_hella",
            "location": "uksouth",
            "name": "nsg3_dev_sprint1_hella",
            "resource_group_name": "rg-dev-uks-sprint01",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsg2_trial_sprint01_hella",
                "priority": 2045,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/networkSecurityGroups/nsg4_dev_sprint1_hella",
            "location": "uksouth",
            "name": "nsg4_dev_sprint1_hella",
            "resource_group_name": "rg-dev-uks-sprint01",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsg2_trial_sprint01_hella",
                "priority": 2045,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/networkSecurityGroups/nsg_dev_sprint1_hella/securityRules/nsg_trial_sprint01_hella",
            "name": "nsg_trial_sprint01_hella",
            "network_security_group_name": "nsg_dev_sprint1_hella",
            "priority": 2045,
            "protocol": "*",
            "resource_group_name": "rg-dev-uks-sprint01",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/networkSecurityGroups/nsg2_dev_sprint1_hella/securityRules/nsg2_trial_sprint01_hella",
            "name": "nsg2_trial_sprint01_hella",
            "network_security_group_name": "nsg2_dev_sprint1_hella",
            "priority": 2045,
            "protocol": "*",
            "resource_group_name": "rg-dev-uks-sprint01",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/networkSecurityGroups/nsg3_dev_sprint1_hella/securityRules/nsg2_trial_sprint01_hella",
            "name": "nsg2_trial_sprint01_hella",
            "network_security_group_name": "nsg3_dev_sprint1_hella",
            "priority": 2045,
            "protocol": "*",
            "resource_group_name": "rg-dev-uks-sprint01",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/networkSecurityGroups/nsg4_dev_sprint1_hella/securityRules/nsg2_trial_sprint01_hella",
            "name": "nsg2_trial_sprint01_hella",
            "network_security_group_name": "nsg4_dev_sprint1_hella",
            "priority": 2045,
            "protocol": "*",
            "resource_group_name": "rg-dev-uks-sprint01",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/default",
            "name": "default",
            "resource_group_name": "rg-dev-uks-sprint01",
            "virtual_network_name": "Vnet-dev-uks-sprint01"
          },
          "dependencies": [
            "azurerm_virtual_network.hella"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "rg-dev-uks-sprint01",
            "virtual_network_name": "Vnet-dev-uks-sprint01"
          },
          "dependencies": [
            "azurerm_virtual_network.hella"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfsubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/subnet2",
            "name": "subnet2",
            "resource_group_name": "rg-dev-uks-sprint01",
            "virtual_network_name": "Vnet-dev-uks-sprint01"
          },
          "dependencies": [
            "azurerm_virtual_network.hella"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfsubnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.192/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/subnet3",
            "name": "subnet3",
            "resource_group_name": "rg-dev-uks-sprint01",
            "virtual_network_name": "Vnet-dev-uks-sprint01"
          },
          "dependencies": [
            "azurerm_virtual_network.hella"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgdefault",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/default",
            "network_security_group_id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/networkSecurityGroups/nsg_dev_sprint1_hella",
            "subnet_id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/default"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_subnet.tfsubnet",
            "azurerm_virtual_network.hella"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/subnet1",
            "network_security_group_id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/networkSecurityGroups/nsg2_dev_sprint1_hella",
            "subnet_id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg2",
            "azurerm_subnet.tfsubnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/subnet2",
            "network_security_group_id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/networkSecurityGroups/nsg3_dev_sprint1_hella",
            "subnet_id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg3",
            "azurerm_subnet.tfsubnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgsubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/subnet3",
            "network_security_group_id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/networkSecurityGroups/nsg4_dev_sprint1_hella",
            "subnet_id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/subnet3"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg4",
            "azurerm_subnet.tfsubnet4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hella",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1ffa736e-7332-4428-a0a9-bedf080117ba",
            "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01",
            "location": "uksouth",
            "name": "Vnet-dev-uks-sprint01",
            "resource_group_name": "rg-dev-uks-sprint01",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/26",
                "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/default",
                "name": "default",
                "security_group": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/networkSecurityGroups/nsg_dev_sprint1_hella"
              },
              {
                "address_prefix": "10.0.0.128/26",
                "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/subnet2",
                "name": "subnet2"
              },
              {
                "address_prefix": "10.0.0.192/26",
                "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/subnet3",
                "name": "subnet3"
              },
              {
                "address_prefix": "10.0.0.64/26",
                "id": "/subscriptions/a2b5e6fe-4153-4ca0-a74e-3f5e50da3ac7/resourceGroups/rg-dev-uks-sprint01/providers/Microsoft.Network/virtualNetworks/Vnet-dev-uks-sprint01/subnets/subnet1",
                "name": "subnet1"
              }
            ],
            "tags": {
              "environment": "Virtual Network tf"
            }
          }
        }
      ]
    }
  ]
}